# rust-auth-microservice

./: Cargo.toml  Makefile  README.md  app-config.json  config.json
scripts/: create-key-pair.sh
src/: main.rs
src/cli/: schema.rs
src/config/: process.rs
src/handlers/: auth.rs
